--- a/index.html
+++ b/index.html
@@ -14,137 +14,109 @@
 <body>
 <form class="quiz">    
     <div class="question">
-        <h4>What is your favorite color?</h4>
+        <h4>Where would you want to be sorted?</h4>
         <div class="option">
-            <input type="radio" id="1"  name="question-1" value="1" checked>
-            <label for="1">This is a really long option. The option is Red!!! Please choose this option!</label>
+            <input type="radio" id="1"  name="question-1" value="m q" checked>
+            <label for="1">Gryffindor</label>
         </div>
         <div class="option">
-            <input type="radio" id="2" name="question-1" value="2">
-            <label for="2">Orange</label>
+            <input type="radio" id="2" name="question-1" value="bu he">
+            <label for="2">Hufflepuff</label>
         </div>
         <div class="option">
-            <input type="radio" id="3" name="question-1" value="3">
-            <label for="3">Yellow</label>
+            <input type="radio" id="3" name="question-1" value="ba l">
+            <label for="3">Slytherin</label>
         </div>
         <div class="option">
-            <input type="radio" id="4" name="question-1" value="4">
-            <label for="4">Green</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="5" name="question-1" value="5">
-            <label for="5">Blue</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="6" name="question-1" value="6">
-            <label for="6">Pink</label>
+            <input type="radio" id="4" name="question-1" value="ho r">
+            <label for="4">Ravenclaw</label>
         </div>
     </div>
 
     <div class="question">
-        <h4>What is your favorite color?</h4>
+        <h4>Favorite dining hall?</h4>
         <div class="option">
-            <input type="radio" id="7"  name="question-2" value="1" checked>
-            <label for="7">Red</label>
+            <input type="radio" id="7"  name="question-2" value="r q bu ho" checked>
+            <label for="7">Moulton</label>
         </div>
         <div class="option">
-            <input type="radio" id="8" name="question-2" value="2">
-            <label for="8">Orange</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="9" name="question-2" value="3">
-            <label for="9">Yellow</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="10" name="question-2" value="4">
-            <label for="10">Green</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="11" name="question-2" value="5">
-            <label for="11">Blue</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="12" name="question-2" value="6">
-            <label for="12">Pink</label>
+            <input type="radio" id="8" name="question-2" value="m he ba l">
+            <label for="8">Thorne</label>
         </div>
     </div>
 
     <div class="question">
-        <h4>Question?</h4>
+        <h4>Favorite dining hall soup?</h4>
         <div class="option">
-            <input type="radio" id="13" name="question-3" value="1" checked>
-            <label for="13">1</label>
+            <input type="radio" id="13" name="question-3" value="m" checked>
+            <label for="13">Curried Carrot</label>
         </div>
         <div class="option">
-            <input type="radio" id="14" name="question-3" value="2">
-            <label for="14">2</label>
+            <input type="radio" id="14" name="question-3" value="bu">
+            <label for="14">Potato Leek</label>
         </div>
         <div class="option">
-            <input type="radio" id="15" name="question-3" value="3">
-            <label for="15">3</label>
+            <input type="radio" id="15" name="question-3" value="q">
+            <label for="15">Silky Cauliflower</label>
         </div>
         <div class="option">
-            <input type="radio" id="16" name="question-3" value="4">
-            <label for="16">4</label>
+            <input type="radio" id="16" name="question-3" value="r">
+            <label for="16">Roasted Squash and Apple</label>
         </div>
         <div class="option">
-            <input type="radio" id="17" name="question-3" value="5">
-            <label for="17">5</label>
+            <input type="radio" id="17" name="question-3" value="ba l">
+            <label for="17">Chicken Tortilla</label>
         </div>
         <div class="option">
-            <input type="radio" id="18" name="question-3" value="6">
-            <label for="18">6</label>
+            <input type="radio" id="18" name="question-3" value="he">
+            <label for="18">Maine Seafood Chowder</label>
+        </div>
+        <div class="option">
+            <input type="radio" id="19" name="question-3" value="">
+            <label for="19">Hungarian Mushroom</label>
         </div>
     </div>
 
     <div class="question">
-        <h4>Question?</h4>
+        <h4>Favorite sports team?</h4>
         <div class="option">
-            <input type="radio" id="19" name="question-4" value="1" checked>
-            <label for="19">1</label>
+            <input type="radio" id="20" name="question-4" value="r q" checked>
+            <label for="20">Frisbee</label>
         </div>
         <div class="option">
-            <input type="radio" id="20" name="question-4" value="2">
-            <label for="20">2</label>
+            <input type="radio" id="21" name="question-4" value="ba l">
+            <label for="21">Lacrosse</label>
         </div>
         <div class="option">
-            <input type="radio" id="21" name="question-4" value="3">
-            <label for="21">3</label>
+            <input type="radio" id="22" name="question-4" value="bu m">
+            <label for="22">Rugby</label>
         </div>
         <div class="option">
-            <input type="radio" id="22" name="question-4" value="4">
-            <label for="22">4</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="23" name="question-4" value="5">
-            <label for="23">5</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="24" name="question-4" value="6">
-            <label for="24">6</label>
+            <input type="radio" id="23" name="question-4" value="he ho">
+            <label for="23">Football</label>
         </div>
     </div>
 
     <div class="question">
         <h4>Question?</h4>
         <div class="option">
-            <input type="radio" id="25" name="question-5" value="1" checked>
+            <input type="radio" id="25" name="question-5" value="m" checked>
             <label for="25">1</label>
         </div>
         <div class="option">
-            <input type="radio" id="26" name="question-5" value="2">
+            <input type="radio" id="26" name="question-5" value="bu">
             <label for="26">2</label>
         </div>
         <div class="option">
-            <input type="radio" id="27" name="question-5" value="3">
+            <input type="radio" id="27" name="question-5" value="q">
             <label for="27">3</label>
         </div>
         <div class="option">
-            <input type="radio" id="28" name="question-5" value="4">
+            <input type="radio" id="28" name="question-5" value="r">
             <label for="28">4</label>
         </div>
         <div class="option">
-            <input type="radio" id="29" name="question-5" value="5">
+            <input type="radio" id="29" name="question-5" value="ba ">
             <label for="29">5</label>
         </div>
         <div class="option">
