--- a/index.html
+++ b/index.html
@@ -98,170 +98,138 @@
     </div>
 
     <div class="question">
-        <h4>Question?</h4>
+        <h4>Favorite Social Media?</h4>
         <div class="option">
-            <input type="radio" id="25" name="question-5" value="m" checked>
-            <label for="25">1</label>
+            <input type="radio" id="25" name="question-5" value="m bu" checked>
+            <label for="25">Facebook</label>
         </div>
         <div class="option">
-            <input type="radio" id="26" name="question-5" value="bu">
-            <label for="26">2</label>
+            <input type="radio" id="26" name="question-5" value="r">
+            <label for="26">Instagram</label>
         </div>
         <div class="option">
-            <input type="radio" id="27" name="question-5" value="q">
-            <label for="27">3</label>
+            <input type="radio" id="27" name="question-5" value="q he">
+            <label for="27">Twitter</label>
         </div>
         <div class="option">
-            <input type="radio" id="28" name="question-5" value="r">
-            <label for="28">4</label>
+            <input type="radio" id="28" name="question-5" value="l">
+            <label for="28">Yik Yak</label>
         </div>
         <div class="option">
-            <input type="radio" id="29" name="question-5" value="ba ">
-            <label for="29">5</label>
+            <input type="radio" id="29" name="question-5" value="ho">
+            <label for="29">LinkedIn</label>
         </div>
         <div class="option">
-            <input type="radio" id="30" name="question-5" value="6">
-            <label for="30">6</label>
+            <input type="radio" id="30" name="question-5" value="ba">
+            <label for="30">Tinder</label>
         </div>
     </div>
 
         <div class="question">
-        <h4>What is your favorite color?</h4>
+        <h4>Would you rather wear bean boots or crack shoes?</h4>
         <div class="option">
-            <input type="radio" id="31"  name="question-6" value="1" checked>
-            <label for="31">Red</label>
+            <input type="radio" id="31"  name="question-6" value="r ho bu l" checked>
+            <label for="31">Bean Boots</label>
         </div>
         <div class="option">
-            <input type="radio" id="32" name="question-6" value="2">
-            <label for="32">Orange</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="33" name="question-6" value="3">
-            <label for="33">Yellow</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="34" name="question-6" value="4">
-            <label for="34">Green</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="35" name="question-6" value="5">
-            <label for="35">Blue</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="36" name="question-6" value="6">
-            <label for="36">Pink</label>
+            <input type="radio" id="32" name="question-6" value="m ba l he">
+            <label for="32">Crack Shoes</label>
         </div>
     </div>
 
     <div class="question">
-        <h4>What is your favorite color?</h4>
+        <h4>What kind of jacket do you own?</h4>
         <div class="option">
-            <input type="radio" id="37"  name="question-7" value="1" checked>
-            <label for="37">Red</label>
+            <input type="radio" id="37"  name="question-7" value="ba l" checked>
+            <label for="37">Canada Goose</label>
         </div>
         <div class="option">
-            <input type="radio" id="38" name="question-7" value="2">
-            <label for="38">Orange</label>
+            <input type="radio" id="38" name="question-7" value="ho bu">
+            <label for="38">L.L.Bean</label>
         </div>
         <div class="option">
-            <input type="radio" id="39" name="question-7" value="3">
-            <label for="39">Yellow</label>
+            <input type="radio" id="39" name="question-7" value="r">
+            <label for="39">Thrift shop find</label>
         </div>
         <div class="option">
-            <input type="radio" id="40" name="question-7" value="4">
-            <label for="40">Green</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="41" name="question-7" value="5">
-            <label for="41">Blue</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="42" name="question-7" value="6">
-            <label for="42">Pink</label>
+            <input type="radio" id="40" name="question-7" value="m q he">
+            <label for="40">Patagucci</label>
         </div>
     </div>
 
     <div class="question">
-        <h4>Question?</h4>
+        <h4>What's your favorite study spot on campus?</h4>
         <div class="option">
-            <input type="radio" id="43" name="question-8" value="1" checked>
-            <label for="43">1</label>
+            <input type="radio" id="43" name="question-8" value="q he" checked>
+            <label for="43">H&amp;L First Floor and Basement</label>
         </div>
         <div class="option">
-            <input type="radio" id="44" name="question-8" value="2">
-            <label for="44">2</label>
+            <input type="radio" id="44" name="question-8" value="m r">
+            <label for="44">The Union</label>
         </div>
         <div class="option">
-            <input type="radio" id="45" name="question-8" value="3">
-            <label for="45">3</label>
+            <input type="radio" id="45" name="question-8" value="bu ho">
+            <label for="45">My house's living room</label>
         </div>
         <div class="option">
-            <input type="radio" id="46" name="question-8" value="4">
-            <label for="46">4</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="47" name="question-8" value="5">
-            <label for="47">5</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="48" name="question-8" value="6">
-            <label for="48">6</label>
+            <input type="radio" id="46" name="question-8" value="ba l">
+            <label for="46">Your bed</label>
         </div>
     </div>
 
     <div class="question">
-        <h4>Question?</h4>
+        <h4>Favorite off-campus house?</h4>
         <div class="option">
-            <input type="radio" id="49" name="question-9" value="1" checked>
-            <label for="49">1</label>
+            <input type="radio" id="49" name="question-9" value="ba" checked>
+            <label for="49">Crack</label>
         </div>
         <div class="option">
-            <input type="radio" id="50" name="question-9" value="2">
-            <label for="50">2</label>
+            <input type="radio" id="50" name="question-9" value="bu">
+            <label for="50">McLellan</label>
         </div>
         <div class="option">
-            <input type="radio" id="51" name="question-9" value="3">
-            <label for="51">3</label>
+            <input type="radio" id="51" name="question-9" value="m">
+            <label for="51">Cleveland</label>
         </div>
         <div class="option">
-            <input type="radio" id="52" name="question-9" value="4">
-            <label for="52">4</label>
+            <input type="radio" id="52" name="question-9" value="he">
+            <label for="52">Pleasant</label>
         </div>
         <div class="option">
-            <input type="radio" id="53" name="question-9" value="5">
-            <label for="53">5</label>
+            <input type="radio" id="53" name="question-9" value="l">
+            <label for="53">Garrison</label>
         </div>
         <div class="option">
-            <input type="radio" id="54" name="question-9" value="6">
-            <label for="54">6</label>
+            <input type="radio" id="54" name="question-9" value="r">
+            <label for="54">Orient House</label>
+        </div>
+        <div class="option">
+            <input type="radio" id="55" name="question-9" value="q">
+            <label for="55">Red Brick</label>
+        </div>
+        <div class="option">
+            <input type="radio" id="56" name="question-9" value="ho">
+            <label for="56">I don't go off campus</label>
         </div>
     </div>
 
     <div class="question">
-        <h4>Question?</h4>
+        <h4>What's your catchphrase?</h4>
         <div class="option">
-            <input type="radio" id="55" name="question-10" value="1" checked>
-            <label for="55">1</label>
+            <input type="radio" id="57" name="question-10" value="ho he" checked>
+            <label for="57">#GoUBears</label>
         </div>
         <div class="option">
-            <input type="radio" id="56" name="question-10" value="2">
-            <label for="56">2</label>
+            <input type="radio" id="58" name="question-10" value="bu r">
+            <label for="58">Turn up!</label>
         </div>
         <div class="option">
-            <input type="radio" id="57" name="question-10" value="3">
-            <label for="57">3</label>
+            <input type="radio" id="59" name="question-10" value="ba m">
+            <label for="59">Is Baxter happening?</label>
         </div>
         <div class="option">
-            <input type="radio" id="58" name="question-10" value="4">
-            <label for="58">4</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="59" name="question-10" value="5">
-            <label for="59">5</label>
-        </div>
-        <div class="option">
-            <input type="radio" id="60" name="question-10" value="6">
-            <label for="60">6</label>
+            <input type="radio" id="60" name="question-10" value="q l">
+            <label for="60">R u up?</label>
         </div>
     </div>
     <input type="submit" value="Submit">
