Correcting spelling from Cleveland to Cleaveland

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
         <div class="option">
             <input type="radio" id="51" name="question-9" value="m">
-            <label for="51">Cleveland</label>
+            <label for="51">Cleaveland</label>
         </div>
         <div class="option">
             <input type="radio" id="52" name="question-9" value="he">
