Add check to make sure are questions are answered

--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
         </div>
     </div>
     <input type="submit" value="Submit">
+    <p class="error" id="incomplete">Make sure to select a response for each question!</p>
 </form>
 
 <div class="results">
