--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <script type="text/javascript" src="app.js" ></script>
 </head>
 <body>
+<h1>What College House Is Best For You?</h1>
 <form class="quiz">    
     <div class="question">
-        <h4>Where would you want to be sorted?</h4>
+        <h4>Where would you be sorted?</h4>
         <div class="option">
             <input type="checkbox" id="1"  name="question-1" value="m q">
             <label for="1">Gryffindor</label>
@@ -64,15 +65,15 @@
             <label for="16">Roasted Squash and Apple</label>
         </div>
         <div class="option">
-            <input type="checkbox" id="17" name="question-3" value="ba l">
+            <input type="checkbox" id="17" name="question-3" value="ba">
             <label for="17">Chicken Tortilla</label>
         </div>
         <div class="option">
             <input type="checkbox" id="18" name="question-3" value="he">
-            <label for="18">Maine Seafood Chowder</label>
+            <label for="18">Corn Chowder</label>
         </div>
         <div class="option">
-            <input type="checkbox" id="19" name="question-3" value="">
+            <input type="checkbox" id="19" name="question-3" value="l">
             <label for="19">Hungarian Mushroom</label>
         </div>
     </div>
@@ -80,7 +81,7 @@
     <div class="question">
         <h4>Favorite sports team?</h4>
         <div class="option">
-            <input type="checkbox" id="20" name="question-4" value="r q">
+            <input type="checkbox" id="20" name="question-4" value="r">
             <label for="20">Frisbee</label>
         </div>
         <div class="option">
@@ -92,8 +93,16 @@
             <label for="22">Rugby</label>
         </div>
         <div class="option">
-            <input type="checkbox" id="23" name="question-4" value="he ho">
+            <input type="checkbox" id="23" name="question-4" value="he">
             <label for="23">Football</label>
+        </div>
+        <div class="option">
+            <input type="checkbox" id="24" name="question-4" value="q">
+            <label for="24">Sailing</label>
+        </div>
+        <div class="option">
+            <input type="checkbox" id="125" name="question-4" value="ho">
+            <label for="125">Crew</label>
         </div>
     </div>
 
@@ -169,7 +178,7 @@
         </div>
         <div class="option">
             <input type="checkbox" id="45" name="question-8" value="bu ho">
-            <label for="45">My house's living room</label>
+            <label for="45">Hatch</label>
         </div>
         <div class="option">
             <input type="checkbox" id="46" name="question-8" value="ba l">
@@ -178,38 +187,22 @@
     </div>
 
     <div class="question">
-        <h4>Favorite off-campus house?</h4>
+        <h4>Favorite restaurant in town?</h4>
         <div class="option">
-            <input type="checkbox" id="49" name="question-9" value="ba">
-            <label for="49">Crack</label>
+            <input type="checkbox" id="49" name="question-9" value="r q">
+            <label for="49">Shere Punjab</label>
         </div>
         <div class="option">
-            <input type="checkbox" id="50" name="question-9" value="bu">
-            <label for="50">McLellan</label>
+            <input type="checkbox" id="50" name="question-9" value="ba l">
+            <label for="50">Little Tokyo</label>
         </div>
         <div class="option">
-            <input type="checkbox" id="51" name="question-9" value="m">
-            <label for="51">Cleaveland</label>
+            <input type="checkbox" id="51" name="question-9" value="m he">
+            <label for="51">Frontier</label>
         </div>
         <div class="option">
-            <input type="checkbox" id="52" name="question-9" value="he">
-            <label for="52">Pleasant</label>
-        </div>
-        <div class="option">
-            <input type="checkbox" id="53" name="question-9" value="l">
-            <label for="53">Garrison</label>
-        </div>
-        <div class="option">
-            <input type="checkbox" id="54" name="question-9" value="r">
-            <label for="54">Orient House</label>
-        </div>
-        <div class="option">
-            <input type="checkbox" id="55" name="question-9" value="q">
-            <label for="55">Red Brick</label>
-        </div>
-        <div class="option">
-            <input type="checkbox" id="56" name="question-9" value="ho">
-            <label for="56">I don't go off campus</label>
+            <input type="checkbox" id="52" name="question-9" value="ho bu">
+            <label for="52">Gelato Fiasco</label>
         </div>
     </div>
 
@@ -225,7 +218,7 @@
         </div>
         <div class="option">
             <input type="checkbox" id="59" name="question-10" value="ba m">
-            <label for="59">Is Baxter happening?</label>
+            <label for="59">YOLO</label>
         </div>
         <div class="option">
             <input type="checkbox" id="60" name="question-10" value="q l">
