Prepare page for release

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <script type="text/javascript" src="app.js" ></script>
 </head>
 <body>
-<h1>What College House Is Best For You?</h1>
+<header>
+<h1 id="wordmark" style="position: relative"><a href="http://bowdoinorient.com/">The Bowdoin Orient</a></h1>
+<h3  style="text-align: center">presents</h3>
+<h1>Which College House Are You?</h1>
+<p class="subtitle">Whether you are a first year applying to a College House, a former House resident, or anyone in between, take this quiz to find out which house the Orient sorting hat might suggest is right for you.</p>
+
+<hr style="width:50%; height: 1px; margin: 40px auto;">
+</header>
 <form class="quiz">    
     <div class="question">
         <h4>Where would you be sorted?</h4>
