--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Quiz!</title>
+    <title>College House Quiz &mdash; The Bowdoin Orient</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -16,7 +16,7 @@
 <h1 id="wordmark" style="position: relative"><a href="http://bowdoinorient.com/">The Bowdoin Orient</a></h1>
 <h3  style="text-align: center">presents</h3>
 <h1>Which College House Are You?</h1>
-<p class="subtitle">Whether you are a first year applying to a College House, a former House resident, or anyone in between, take this quiz to find out which house the Orient sorting hat might suggest is right for you.</p>
+<p class="subtitle">Whether you are a first year applying to a College House, a former House resident, or anyone in between, take this quiz to find out which House the Orient sorting hat suggests is right for you.</p>
 
 <hr style="width:50%; height: 1px; margin: 40px auto;">
 </header>
@@ -114,7 +114,7 @@
     </div>
 
     <div class="question">
-        <h4>Favorite Social Media?</h4>
+        <h4>Favorite social media?</h4>
         <div class="option">
             <input type="checkbox" id="25" name="question-5" value="m bu">
             <label for="25">Facebook</label>
