Words words words

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="questions">
-            <p class="instructions">Words words words</p>
+            <p class="instructions">Select how important each of the following factors is to you.</p>
 
             <div class="questions-wrap">
                 <form action="#">
